# Projekt3

./: CMakeLists.txt  INSTRUKCJA.txt  main.cpp  raport.ipynb
MakeLibrary/: CMakeLists.txt  MakeLibrary.cpp  MakeLibrary.h
